--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "qml/MeeTuner/components"]
 	path = qml/MeeTuner/components
-	url = https://gorthauer@github.com/gorthauer/qml-components.git
+	url = git@github.com:gorthauer/qml-components.git
