--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "qml/MeeTuner/components"]
-	path = qml/MeeTuner/components
+[submodule "app/qml/MeeTuner/components"]
+	path = app/qml/MeeTuner/components
 	url = git@github.com:gorthauer/qml-components.git
 	branch = master
